# sql-bedrock

./: .gitignore  README.md  pyproject.toml
.github/workflows/: code-quality.yml
src/bedrock/: __init__.py
src/bedrock/dialects/: __init__.py  sqldialect.py  sqldialecttype.py
src/bedrock/expressions/: __init__.py  expression.py
src/bedrock/parsing/: __init__.py
src/bedrock/parsing/adapters/: __init__.py
src/bedrock/parsing/adapters/generic/: __init__.py  parseradapter.py
